# ai_cbc

./: .aiignore  .dockerignore  .env.azure-b2ats.example  .env.example  .gitignore  .pre-commit-config.yaml  AI_CBC_系统总览白皮书.md  BE-6-手动执行手册.md  CLAUDE.md  DEPLOYMENT-CHECKLIST.md  GitHub Actions CI_CD 编写指南.md  bandit-report.json  bandit_report.json  docker-compose.azure-b2ats.yml  docker-compose.azure-worker.yml  docker-compose.yml  pip_audit_report.json  pyproject.toml  render.yaml  teams.md  消费者画像.md
cbc-analysis-system/: 01-CBC数据分析系统架构.md  02-数据接口规范.md  03-模型实现指南.md  04-LLM-Agent设计.md  05-测试与验证规范.md  06-API接口设计.md  07-ToolCalling协议设计.md  CLAUDE.md
cbc-questionnaire-system/: 01-CBC系统架构与解决方案.md  02-CBC问卷生成输入规范.md  03-CBC实验设计算法说明.md  04-CBC与模拟消费者集成方案.md  05-属性水平与实验设计.md  CLAUDE.md
configs/: CLAUDE.md
consumer-simulation/: 01-核心理念与架构.md  02-阶段一-画像生成.md  03-阶段二-行为模拟引擎.md  04-阶段三四-交互与验证.md  05-Prompt模板库.md  06-进阶技巧与应用场景.md  07-Harness架构设计方案.md  08-Agent输入信息规范.md  09-Agent输出信息规范.md  10-完整案例演示.md  11-多Agent协作协议.md  12-画像资产化管理规范.md  13-实现参考与接口定义.md  14-测试规范.md  15-运维手册.md  16-API文档.md  17-MVP开发计划.md  CLAUDE.md  README.md
delete/: direct_test.txt  fastapi_test.txt  frontend_fixes.md  full_test.txt  import_trace.txt  override_test.txt  package-lock.json  package.json  performance_review.md  personas_test.txt  pg_test.txt  progress_report.md  pytest_fast.txt  pytest_output.txt  s1.txt  s2.txt  s3.txt  s4.txt  s5.txt  store_test.txt  t1.txt  t2.txt  t3.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt  test_output.txt
docker/: CLAUDE.md  Dockerfile  alertmanager.yml  nginx.azure-b2ats.conf  nginx.conf  prometheus-rules.yml  prometheus.yml  supervisord-api.conf  supervisord-b2ats.conf  supervisord-render.conf  supervisord-worker.conf
docs/: Agent原型Prompt设计.md  Agent安全架构纲要.md  CI-CD流水线设计.md  CLAUDE.md  Phase2红队测试计划.md  业务验收标准与KPI框架.md  伦理与偏见审计规范.md  偏见审计清单.md  全链路集成架构设计.md  公平性Prompt注入与审计模板.md  培训与变更管理指南.md  安全架构与红队测试规范.md  建模管线与API设计.md  成本管控与预算模型.md  成本管控方案.md  数据字典.md  数据隐私与合规指南.md  文档审阅与一致性报告.md  文档索引与导航.md  洗碗机CBC实验设计方案.md  测试验证方案.md  目标人群角色卡设计.md  端到端数据流与集成规范.md  系统成功标准书.md  系统部署与运维架构.md  虚拟消费者公平性规范.md  虚拟消费者真实性验收标准.md  部署架构初步方案与实施路线图.md  隐私合规检查表.md  项目成功标准书.md  项目成本预算方案.md  项目进度计划与里程碑.md  风险管理登记册.md
frontend/: .env.production  CLAUDE.md  README.md  browser-full-test.cjs  browser-inspect.cjs  browser-test-detailed.cjs  browser-test.cjs  cbc_full_flow_test.py  cbc_full_flow_v2.py  eslint.config.js  index.html  npm-audit.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
k8s/: CLAUDE.md  (+4 more)
(+599 files in other folders)
