[project]
name = "aicbc"
version = "0.1.0"
description = "AI_CBC - AI-powered Choice-Based Conjoint virtual consumer research platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "motor>=3.4.0,<3.7",
    "beanie>=1.26.0,<2.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "anthropic>=0.28.0",
    "openai>=1.35.0",
    "httpx>=0.27.0",
    "structlog>=24.2.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.20.0",
    "scipy>=1.17.1",
    "cryptography>=49.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "pre-commit>=3.7.0",
]
analysis = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pymc>=5.15.0",
    "arviz>=0.18.0",
    "scipy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"src/aicbc/analysis/engines/*.py" = ["N806"]
"src/aicbc/questionnaire/design/d_optimal.py" = ["N806"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v -m \"not slow\""
# Coverage is CI-only. To run locally: uv run pytest --cov=src --cov-report=term-missing
norecursedirs = ["tests/performance", ".git", ".tox", "dist", "build"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
severity = "MEDIUM"
confidence = "MEDIUM"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "locust>=2.44.3",
]
